--- a/game2.html
+++ b/game2.html
@@ -241,11 +241,13 @@
             <div id="paymentInfo" class="payment-info">
                 Your final score of <span id="finalScoreDisplay">0</span> points is equivalent to ₹<span id="inrDisplay">0</span>.
                 <br> Available payment methods:
-                <div class="payment-logos">https
-                     <a href="./hiba.mp4" target="_blank" title="Watch a fun Malayalam comedy video!"><img src="https://lh3.googleusercontent.com/-HMMzVNh69gL0SsLMReGytn-Wf10oFHBOO05oixe5pKe5762nCu8YGadIHQ2xj5wGW4irBS_eUZ3riQhsl63THzhkMjJYx43mzBa2Z7Wf8NNGT4HicbO=w1200-l80-sg-rj" alt="GPay" width="100" height="50">
-                        <a href="hiba.mp4" target="_blank" title="Watch a fun Malayalam comedy video!"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtzgoGnOSSiaow6ecaZ7aUUVU6BcIIAW4p3Q&s" alt="Paytm" width="100" height="50">
-                            <a href="https://www.youtube.com/watch?v=e_04-j22uQo" target="_blank" title="Watch a fun Malayalam comedy video!"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTK72RBoNYIExapV2XAQoVVBZQJz2oJsk9SHg&s" alt="PhonePe" width="100" height="50">
-                </div>
+            <div class="payment-logos">
+                <video width="320" height="180" controls>
+                    <source src="./hiba.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+
             </div>
         </div>
     </div>
