--- a/game2.html
+++ b/game2.html
@@ -239,7 +239,7 @@
         <div class="modal">
             <span class="modal-close-btn" id="closeModalBtn">&times;</span>
             <div id="paymentInfo" class="payment-info">
-                Your final score of <span id="finalScoreDisplay">0</span> points is equivalent to ₹<span id="inrDisplay">0</span>.
+                 <span id="finalScoreDisplay">0</span> <span id="inrDisplay">0</span>.
                 <br> Available payment methods:
             <div class="payment-logos">
                 <video width="320" height="180" controls>
