--- a/game2.html
+++ b/game2.html
@@ -242,7 +242,7 @@
                  <span id="finalScoreDisplay">0</span> <span id="inrDisplay">0</span>.
                 <br> 
             <div class="payment-logos">
-                <video width="320" height="180" controls autoplay >
+                <video width="320" height="180" controls >
                     <source src="./hiba.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
